--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
     "bootstrap": "^4.5.2",
+    "emotion": "^10.0.27",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
