--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.54",
     "@types/react": "^16.9.47",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
     "emotion": "^10.0.27",
     "foswig": "^3.0.1",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "styled-components": "^5.1.1",
     "typescript": "^4.0"
   },
   "scripts": {
