--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@iconify/icons-bx": "^1.0.3",
-    "@iconify/react": "^1.1.3"
+    "@iconify/react": "^1.1.3",
+    "ts-node": "^9.0.0"
   }
 }
