--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
-    "emotion": "^10.0.27",
+    "eslint-config-react-app": "^5.2.1",
+    "rc-slider": "^9.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.1.1",
-    "typescript": "^4.0"
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +45,14 @@
   "devDependencies": {
     "@iconify/icons-bx": "^1.0.3",
     "@iconify/react": "^1.1.3",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "@typescript-eslint/parser": "^2.34.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-jest": "^24.0.2",
+    "eslint-plugin-react": "^7.21.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "ts-node": "^9.0.0"
   }
 }
