--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
-    "rc-slider": "^9.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -47,7 +46,6 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-jest": "^24.0.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "ts-node": "^9.0.0"
+    "popper.js": "^1.16.1"
   }
 }
