--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "typing_trainer",
+  "homepage": "https://nilueps.github.io/type_trainer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
     "bootstrap": "^4.5.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -20,6 +22,8 @@
     "typescript": "^4.0.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
